Take vec:matvec over a bfloat16 matrix on the device, on a compensated float accumulator
.todo/490: the bf16 weights / f32 activations pairing the CPU's fused kernel has,
now on CUDA. gemv_bf16 widens each stored pattern in its lane loop and is
otherwise gemv_f32, so it is the f32 kernel over the widened matrix bit for bit
(pinned in GpuTest at 512x768, and 0 mismatching rows at every shape of the
crossover probe). The seam is GpuDevice.supportsBfloat16() beside supportsDouble
-- Metal declines -- and gemvBf16; DeviceResidency keys a short[] like any other
host array; the interpreter arm is LinalgGpu.matvec's LispBFloat16Array case, the
compiled bridge's JvmGpuTemplate.gpuMatvecBf16 over the two-slot bf16 header.

The measurement that changed the kernels: the bf16 GEMV ran at 138 GB/s over a
508 MB matrix, half the device's bandwidth, and every load width from 16 to 128
bits landed on the same figure -- on a GB10 one double FMA per element is a
compute ceiling (~70 G/s) that the f32 kernel sat just under and the bf16 kernel
hit. The f32 and bf16 kernels now keep the compensated float-float accumulator
gemm.metal's gemv_f32 always used (fma product error, TwoSum, pair-wise warp
fold), which measured bit-identical to the double-accumulated oracle on every
row at seven shapes up to 248320x1024: bf16 at 229 GB/s, 1.9-2.9x the f32
kernel from 12 MB up; f32 unchanged where it was bandwidth-bound and 2.5-5x in
L2. The f64 kernel keeps its double.

The 2^17 threshold stands at both widths (bf16 1.4x at 2^17, 2.3x at 2^18; f32
a tie at exactly 2^17 since .todo/480 and 1.5x at 768x288, recorded in
.kb/gpu.md). The residency cap was never the constraint under the interceptors
(the lazy headroom rule); forced below the model the decode drops BELOW --simd
and says nothing, filed as .todo/716. GpuOfferDifferentialTest's stale bf16
stub and missing matvec offer: .todo/717.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JJrzx